aggiustato jumbotron, aggiunte icone nel footer

--- a/index.html
+++ b/index.html
@@ -136,22 +136,22 @@
 
           <div class="content-4 content-3 fl shadow">
             <img src="img/sales-hub.png" alt="">
-            <h4>Marketing Hub</h4>
-            <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaign at scale.</p>
+            <h4>Sales Hub</h4>
+            <p>Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.</p>
             <hr>
             <h5>POPULAR FEATURE</h5>
 
             <div class="content-3-list">
               <img src="img/check-orange.png" alt="">
-              <span>Lead Generation</span>
+              <span>Email Tracking</span>
             </div>
             <div class="content-3-list">
               <img src="img/check-orange.png" alt="">
-              <span>Marketing Automation</span>
+              <span>Meeting Scheduling</span>
             </div>
             <div class="content-3-list">
               <img src="img/check-orange.png" alt="">
-              <span>Analytics</span>
+              <span>Email Automation</span>
             </div>
             <div class="content-3-button">
               <a class="a" href="https://www.google.com"><span class="button button-type-b">Learn More</span></a>
@@ -160,22 +160,22 @@
           <div class="content-3 fl shadow">
 
             <img src="img/service-hub.png" alt="">
-            <h4>Marketing Hub</h4>
-            <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaign at scale.</p>
+            <h4>Service Hub</h4>
+            <p>Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business.</p>
             <hr>
             <h5>POPULAR FEATURE</h5>
 
             <div class="content-3-list">
               <img src="img/check-orange.png" alt="">
-              <span>Lead Generation</span>
+              <span>Tickets</span>
             </div>
             <div class="content-3-list">
               <img src="img/check-orange.png" alt="">
-              <span>Marketing Automation</span>
+              <span>Customer Feedback</span>
             </div>
             <div class="content-3-list">
               <img src="img/check-orange.png" alt="">
-              <span>Analytics</span>
+              <span>Knowledge Base</span>
             </div>
             <div class="content-3-button">
               <a class="a" href="https://www.google.com"><span class="button button-type-b">Learn More</span></a>
@@ -319,7 +319,14 @@
           <p><a class="a" href="https://www.google.com">Get a Free Website Report</a></p>
           <p><a class="a" href="https://www.google.com">HubSpot Templates</a></p>
           <p><a class="a" href="https://www.google.com">Free Tools & Generators</a></p>
-          <span class="button button-type-c"><a href="https:/www.google.com">Contact HubSpot Support</a></span>
+          <a href="https:/www.google.com"><span class="button button-type-c">Contact HubSpot Support</span></a>
+          <div class="icons">
+            <a href="https://www.facebook.com"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            <a href="https://www.instagram.com"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <a href="https://www.youtube.com"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+            <a href="https://www.twitter.com"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            <a href="https://www.linkedin.com"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+          </div>
         </div>
       </div>
       <!-- /link box row footer -->
